# Agora-C_Sharp-SDK

./: .clang-format  .editorconfig  .gitignore  Jenkinsfile_bitbucket.groovy  README.md  README.zh.md  Readme.zh.md  agorartc.sln  build.bat  compile-windows.bat  rtm_only.sh  url_config.txt
APIExample/: .gitignore  APIExample.csproj  APIExample.sln  App.xaml  App.xaml.cs  CSharpForm.Designer.cs  (+5 more)
agora_cpp/: CMakeLists.txt  agora_cpp.sln
agora_cpp/CSharp_RTC_SDK/: CSharp_RTC_SDK.vcxproj  CSharp_RTC_SDK.vcxproj.filters  build.cpp
agora_cpp/CSharp_RTC_SDK/src/cross-platform-sdk-module/rtc/: LogHelper.h
agora_cpp/CSharp_RTC_SDK/src/cross-platform-sdk-module/rtc/c_api/: cross_platform_c_api_wrapper.cpp  cross_platform_c_api_wrapper.h  cross_platform_c_json_wrapper.h
agora_cpp/CSharp_RTC_SDK/src/cross-platform-sdk-module/rtc/callback/rtcChannnelCallback/: RtcChannelEventHandler.h
agora_cpp/CSharp_RTC_SDK/src/cross-platform-sdk-module/rtc/callback/rtcEngineCallback/: RtcEngineEventHandler.cpp  RtcEngineEventHandler.h
agora_cpp/CSharp_RTC_SDK/src/cross-platform-sdk-module/rtc/common/: CType.h
agora_cpp/CSharp_RTC_SDK/src/cross-platform-sdk-module/rtc/deviceManager/audioDeviceManager/: AudioPlaybackDeviceManager.cpp  AudioRecordingDeviceManager.cpp
agora_cpp/CSharp_RTC_SDK/src/cross-platform-sdk-module/rtc/rtcEngine/: RtcEngineBridge.cpp
agora_cpp/CSharp_RTC_SDK/src/cross-platform-sdk-module/rtc/test/: ApiTester.cpp  ApiTester.h  EventTester.cpp  EventTester.h  LogJson.cpp  LogJson.h  api_tester_c.cpp  api_tester_c.h  event_tester_c.cpp  event_tester_c.h
(+1484 files in other folders)
